# chat-app-server

./: .env  .gitignore  Cargo.toml
.sqlx/: query-2eb75cdfc4755a2055cbc35d184a26eb02ce90b1be099a1c616ed4a64fe00cd3.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
config/: default.toml
migrations/: 20250404170149_initial_shena.sql  20250410131011_alter_username_length.sql  20250508065907_create_users_table.sql
src/: config.rs  error.rs  main.rs
src/handlers/: auth.rs
src/middleware/: auth.rs
src/models/: mod.rs  user.rs
src/routes/: auth.rs  mod.rs
src/service/: jwt.rs
src/state/: app_state.rs
src/tests/: start.http
