[package]
name = "chat-app-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "uuid",
    "chrono",
] }

axum-extra = { version = "0.10.0", features = ["typed-header"] }
jsonwebtoken = "9.3"

futures = "0.3.17"

thiserror = "2.0.12"

uuid = { version = "1.16.0", features = ["v4", "serde"] }
argon2 = "0.5.3"

chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
